[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/entities/player/NetworkPlatformerPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/NetworkPlatformerScene.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/platformer/bg.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/platformer/test_tiles.png" type="Texture" id=4]
[ext_resource path="res://src/entities/camera/CameraController.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/SpecialElite-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/entities/camera/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/entities/respawn/RespawnPoint.tscn" type="PackedScene" id=8]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 24, 24, 0, 24, 0, 0, 24, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 24, 24, 0, 24, 0, 0, 24, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 24, 24, 0, 24, 0, 0, 24, 0 )

[sub_resource type="TileSet" id=1]
0/name = "test_tiles.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "test_tiles.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 0, 24, 24 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "test_tiles.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 24, 0, 24, 24 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 36
outline_size = 2
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 50, 60 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 48.1661, 30 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 13.5081, 11.5457 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 24.6325, 22.9349 )

[node name="NetworkPlatformerScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 180, 120 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 24, 24 )
collision_layer = 21
collision_mask = 21
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, 65535, 1, 0, 7, 1, 0, 15, 1, 0, 131071, 1, 0, 65543, 2, 0, 65551, 1, 0, 196607, 1, 0, 131079, 1, 0, 131087, 1, 0, 262143, 1, 0, 196615, 2, 0, 196623, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262151, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 393215, 1, 0, 327688, 1, 0, 327695, 1, 0, 458751, 1, 0, 393218, 1, 0, 393231, 1, 0, 524287, 1, 0, 458762, 0, 0, 458763, 1, 0, 458764, 1, 0, 458767, 1, 0, 589823, 1, 0, 524290, 1, 0, 524296, 1, 0, 524297, 1, 0, 524301, 1, 0, 524303, 1, 0, 655359, 1, 0, 589826, 1, 0, 589831, 1, 0, 589839, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0 )

[node name="Bullets" type="Node2D" parent="."]

[node name="Effects" type="Node2D" parent="."]

[node name="Entities" type="Node2D" parent="."]

[node name="PlatformerPlayer" parent="Entities" instance=ExtResource( 1 )]
position = Vector2( 125, 72.0675 )

[node name="CameraController" parent="Entities/PlatformerPlayer" instance=ExtResource( 5 )]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RespawnTimerUI" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="RespawnTimerUI"]
margin_left = 70.715
margin_top = 49.3882
margin_right = 281.715
margin_bottom = 188.388

[node name="Label" type="Label" parent="RespawnTimerUI/Panel"]
anchor_right = 1.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )
text = "Respawning in"
align = 1
valign = 1

[node name="Countdown" type="Label" parent="RespawnTimerUI/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -93.0
custom_fonts/font = SubResource( 6 )
text = "3"
align = 1
valign = 1

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="PlayerPoints" type="Label" parent="PlayerUI"]
margin_left = 10.1021
margin_top = 12.3471
margin_right = 64.1021
margin_bottom = 61.3471
custom_colors/font_color = Color( 0.156863, 0.360784, 0.768627, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1

[node name="OpponentPoints" type="Label" parent="PlayerUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -66.347
margin_top = 12.3471
margin_right = -12.347
margin_bottom = 61.3471
custom_colors/font_color = Color( 0.705882, 0.12549, 0.164706, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1

[node name="HealthBar" parent="PlayerUI" instance=ExtResource( 7 )]
position = Vector2( 45.2001, 209.012 )

[node name="RespawnPoints" type="Node2D" parent="."]

[node name="RespawnPoint" parent="RespawnPoints" instance=ExtResource( 8 )]
position = Vector2( 30.2001, 78.4003 )

[node name="CollisionShape2D" parent="RespawnPoints/RespawnPoint/Area2D" index="0"]
position = Vector2( 19.4465, -19.449 )
shape = SubResource( 8 )

[node name="RespawnPoint4" parent="RespawnPoints" instance=ExtResource( 8 )]
position = Vector2( 342.171, 78.4003 )

[node name="CollisionShape2D" parent="RespawnPoints/RespawnPoint4/Area2D" index="0"]
position = Vector2( -33.0892, -19.449 )
shape = SubResource( 8 )

[node name="RespawnPoint2" parent="RespawnPoints" instance=ExtResource( 8 )]
position = Vector2( 30.2001, 218.012 )

[node name="CollisionShape2D" parent="RespawnPoints/RespawnPoint2/Area2D" index="0"]
position = Vector2( 21, -36.9301 )
shape = SubResource( 8 )

[node name="RespawnPoint3" parent="RespawnPoints" instance=ExtResource( 8 )]
position = Vector2( 248.45, 218.012 )

[node name="CollisionShape2D" parent="RespawnPoints/RespawnPoint3/Area2D" index="0"]
position = Vector2( 15.3931, -8.99998 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RespawnPoints/RespawnPoint3/Area2D" index="1"]
position = Vector2( -41.5925, 9.57864 )
shape = SubResource( 10 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="RespawnPoints/RespawnPoint3/Area2D" index="2"]
position = Vector2( 88.7215, -1.81058 )
shape = SubResource( 11 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]

[editable path="RespawnPoints/RespawnPoint"]
[editable path="RespawnPoints/RespawnPoint4"]
[editable path="RespawnPoints/RespawnPoint2"]
[editable path="RespawnPoints/RespawnPoint3"]
